generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "."
  outputName = "schema.dbml"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  CUSTOMER
  SALON_OWNER
  ADMIN
}

enum BookingStatus {
  PENDING
  CONFIRMED
  COMPLETED
  CANCELLED
  NO_SHOW
}

enum PriceLevel {
  BUDGET
  MODERATE
  PREMIUM
  LUXURY
}

model User {
  id            String         @id @default(uuid()) @db.Uuid
  name          String
  email         String         @unique
  phone         String?
  avatarUrl     String?        @map("avatar_url")
  role          Role           @default(CUSTOMER)
  passwordHash  String         @map("password_hash")
  refreshTokens RefreshToken[]
  salons        Salon[]        @relation("SalonOwner")
  bookings      Booking[]      @relation("CustomerBookings")
  reviews       Review[]
  createdAt     DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt     DateTime       @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([email])
  @@map("users")
}

model RefreshToken {
  id                String         @id @default(uuid()) @db.Uuid
  userId            String         @map("user_id") @db.Uuid
  user              User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash         String         @unique @map("token_hash")
  expiresAt         DateTime       @map("expires_at") @db.Timestamptz(6)
  revokedAt         DateTime?      @map("revoked_at") @db.Timestamptz(6)
  replacedByTokenId String?        @map("replaced_by_token_id") @db.Uuid
  replacedByToken   RefreshToken?  @relation("RefreshTokenReplacement", fields: [replacedByTokenId], references: [id])
  replacesTokens    RefreshToken[] @relation("RefreshTokenReplacement")
  createdAt         DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([userId])
  @@index([tokenHash])
  @@map("refresh_tokens")
}

/// A top-level marketplace vertical (Salon, Barbershop, Spa, Yoga, etc.)
model Category {
  id          String   @id @default(uuid()) @db.Uuid
  name        String
  slug        String   @unique
  icon        String?
  description String?
  sortOrder   Int      @default(0) @map("sort_order")
  salons      Salon[]
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("categories")
}

/// A partner business listed on the marketplace.
model Salon {
  id           String        @id @default(uuid()) @db.Uuid
  ownerId      String        @map("owner_id") @db.Uuid
  owner        User          @relation("SalonOwner", fields: [ownerId], references: [id], onDelete: Cascade)
  categoryId   String        @map("category_id") @db.Uuid
  category     Category      @relation(fields: [categoryId], references: [id])
  name         String
  slug         String        @unique
  tagline      String?
  description  String?
  coverImage   String?       @map("cover_image")
  images       String[]      @default([])
  phone        String?
  email        String?
  addressLine  String?       @map("address_line")
  area         String?
  city         String
  state        String?
  pincode      String?
  latitude     Float?
  longitude    Float?
  priceLevel   PriceLevel    @default(MODERATE) @map("price_level")
  isVerified   Boolean       @default(false) @map("is_verified")
  isActive     Boolean       @default(true) @map("is_active")
  openingHours Json?         @map("opening_hours")
  ratingAvg    Float         @default(0) @map("rating_avg")
  ratingCount  Int           @default(0) @map("rating_count")
  services     Service[]
  staff        StaffMember[]
  bookings     Booking[]
  reviews      Review[]
  createdAt    DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([categoryId])
  @@index([city])
  @@index([ownerId])
  @@map("salons")
}

/// A bookable service offered by a salon.
model Service {
  id          String    @id @default(uuid()) @db.Uuid
  salonId     String    @map("salon_id") @db.Uuid
  salon       Salon     @relation(fields: [salonId], references: [id], onDelete: Cascade)
  name        String
  description String?
  durationMin Int       @map("duration_min")
  priceInr    Int       @map("price_inr")
  category    String?
  isActive    Boolean   @default(true) @map("is_active")
  bookings    Booking[]
  createdAt   DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([salonId])
  @@map("services")
}

/// A staff member / professional at a salon.
model StaffMember {
  id        String    @id @default(uuid()) @db.Uuid
  salonId   String    @map("salon_id") @db.Uuid
  salon     Salon     @relation(fields: [salonId], references: [id], onDelete: Cascade)
  name      String
  title     String?
  bio       String?
  avatarUrl String?   @map("avatar_url")
  isActive  Boolean   @default(true) @map("is_active")
  bookings  Booking[]
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([salonId])
  @@map("staff_members")
}

/// A customer appointment for a service at a salon.
model Booking {
  id           String        @id @default(uuid()) @db.Uuid
  customerId   String        @map("customer_id") @db.Uuid
  customer     User          @relation("CustomerBookings", fields: [customerId], references: [id], onDelete: Cascade)
  salonId      String        @map("salon_id") @db.Uuid
  salon        Salon         @relation(fields: [salonId], references: [id], onDelete: Cascade)
  serviceId    String        @map("service_id") @db.Uuid
  service      Service       @relation(fields: [serviceId], references: [id])
  staffId      String?       @map("staff_id") @db.Uuid
  staff        StaffMember?  @relation(fields: [staffId], references: [id])
  scheduledAt  DateTime      @map("scheduled_at") @db.Timestamptz(6)
  durationMin  Int           @map("duration_min")
  status       BookingStatus @default(PENDING)
  totalInr     Int           @map("total_inr")
  tokenPaidInr Int           @default(0) @map("token_paid_inr")
  notes        String?
  review       Review?
  createdAt    DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([customerId])
  @@index([salonId])
  @@index([scheduledAt])
  @@map("bookings")
}

/// A customer review for a salon, optionally tied to a completed booking.
model Review {
  id         String   @id @default(uuid()) @db.Uuid
  salonId    String   @map("salon_id") @db.Uuid
  salon      Salon    @relation(fields: [salonId], references: [id], onDelete: Cascade)
  customerId String   @map("customer_id") @db.Uuid
  customer   User     @relation(fields: [customerId], references: [id], onDelete: Cascade)
  bookingId  String?  @unique @map("booking_id") @db.Uuid
  booking    Booking? @relation(fields: [bookingId], references: [id], onDelete: SetNull)
  rating     Int
  comment    String?
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([salonId])
  @@map("reviews")
}
